Corrected deserialization